# music-box-interactive-api

./: .dockerignore  .env  .gitignore  Brewfile  CONTRIBUTING.md  Dockerfile.api  Dockerfile.api-prod  Dockerfile.model_runner  Dockerfile.status_listener  Dockerfile.web  README.md  acom.ucar.edu.crt  acom.ucar.edu.key  cert.pem  conftest.py  db.sqlite3  django-unit-tests.py  docker-compose-prod.yml  docker-compose.yml  graph.py  init.sql  mongo_setup.txt  pyproject.toml  pytest.ini  reaction_graph.html  requirements.txt  start_servers.sh  unit-tests-dockerfile
.github/workflows/: pep8.yml  pytest.yml  run-unit-tests.yml
docker/: Dockerfile.api  Dockerfile.model_runner  Dockerfile.status_listener
etc/: clean_mechanism.py
interactive/: UnitTestRunner.py  database_tools.py  db.sqlite3  helper.py  manage.py  rabbit_mq_model_runner.py  rabbit_mq_model_status_listener.py  settings.json  test_examples.py  unit_test_runner.py  update_environment_variables.py
interactive/admin/: api.py  asgi.py  settings.py  urls.py  wsgi.py
interactive/api/: api.py  controller.py  database_tools.py  models.py  request_models.py  response_models.py  run_status.py  urls.py
interactive/configure/: apps.py  forms.py  views.py
interactive/dashboard/: api.py  build_unit_converter.py  controller.py  csvload.py  database_tools.py  flow_diagram.py  forms.py  formsetup.py  import.py  models.py  save.py  (+5 more)
static_page_server/: conditions.html  home.html  server.py
test/: Dockerfile  README.md  run_tests.py  test_conditions.py  testing_functions.py  xpaths.json
testing/: Dockerfile  test.py
(+178 files in other folders)
